[gd_scene load_steps=7 format=3 uid="uid://c386ovsjclktc"]

[ext_resource type="Script" uid="uid://j3wnbwulmccx" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://degsnrielqyat" path="res://scenes/note_card.tscn" id="2_iywne"]
[ext_resource type="AudioStream" uid="uid://bfcan4vkexdbx" path="res://music/65bpm.wav" id="3_p57ef"]
[ext_resource type="AudioStream" uid="uid://2jnksfmcxlo2" path="res://sfx/clap.wav" id="4_u5sy4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6t"]
bg_color = Color(0.616551, 0.001236, 0.758741, 1)

[sub_resource type="Theme" id="Theme_feb5d"]
Panel/styles/panel = SubResource("StyleBoxFlat_e2o6t")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbhrr")

[node name="Background" type="Panel" parent="."]
z_index = -10
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_feb5d")
metadata/_edit_lock_ = true

[node name="GameObjects" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="GameObjects"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -252.16
offset_right = 20.0
offset_bottom = -212.16
grow_horizontal = 2
grow_vertical = 2

[node name="NoteCard1" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = -291.0
offset_top = -42.839996
offset_right = -151.0
offset_bottom = 97.16
next_notes = Array[float]([0.25])

[node name="NoteCardDisplay" parent="GameObjects/Control/NoteCard1" index="5"]
visible = false

[node name="NoteCard2" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = -122.0
offset_top = -42.839996
offset_right = 18.0
offset_bottom = 97.16
notes = Array[float]([0.25])
next_notes = Array[float]([0.125, 0.125])
beat_num = 2

[node name="NoteCardDisplay" parent="GameObjects/Control/NoteCard2" index="5"]
visible = false

[node name="NoteCard3" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = 39.0
offset_top = -42.839996
offset_right = 179.0
offset_bottom = 97.16
next_notes = Array[float]([0.125])
beat_num = 3

[node name="NoteCardDisplay" parent="GameObjects/Control/NoteCard3" index="5"]
visible = false

[node name="NoteCard4" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = 213.0
offset_top = -42.839996
offset_right = 353.0
offset_bottom = 97.16
notes = Array[float]([0.25])
next_notes = Array[float]([0.125, 0.125])
beat_num = 4

[node name="NoteCardDisplay" parent="GameObjects/Control/NoteCard4" index="5"]
visible = false

[node name="NoteCard5" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = -291.0
offset_top = 135.16
offset_right = -151.0
offset_bottom = 275.16
next_notes = Array[float]([0.25])
beat_num = 5

[node name="NoteCard6" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = -122.0
offset_top = 135.16
offset_right = 18.0
offset_bottom = 275.16
notes = Array[float]([0.25])
next_notes = Array[float]([0.125, 0.125])
beat_num = 6

[node name="NoteCard7" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = 39.0
offset_top = 135.16
offset_right = 179.0
offset_bottom = 275.16
next_notes = Array[float]([0.125])
beat_num = 7

[node name="NoteCard8" parent="GameObjects/Control" instance=ExtResource("2_iywne")]
layout_mode = 0
offset_left = 213.0
offset_top = 135.16
offset_right = 353.0
offset_bottom = 275.16
notes = Array[float]([0.25])
next_notes = Array[float]([0.125, 0.125])
beat_num = 8

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p57ef")

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u5sy4")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PointsLabel" type="Label" parent="HUD"]
offset_left = 27.0
offset_top = 17.0
offset_right = 286.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 60
text = "Score:"

[node name="StreakLabel" type="Label" parent="HUD"]
offset_left = 1425.0
offset_top = 19.0
offset_right = 1684.0
offset_bottom = 109.0
theme_override_font_sizes/font_size = 60
text = "Streak: 0"

[node name="Button" type="Button" parent="HUD"]
z_index = 50
offset_left = 1784.0
offset_top = 1.0
offset_right = 1885.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 60
text = ">"
autowrap_mode = 3

[connection signal="beat_signal" from="." to="." method="_on_beat_signal"]
[connection signal="round_changed" from="." to="." method="_on_round_changed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="button_up" from="HUD/Button" to="." method="return_to_song_selection"]

[editable path="GameObjects/Control/NoteCard1"]
[editable path="GameObjects/Control/NoteCard2"]
[editable path="GameObjects/Control/NoteCard3"]
[editable path="GameObjects/Control/NoteCard4"]
